# shuttle-axum-example

./: Cargo.toml  migrations.sql
src/: main.rs
